cabal-version:      3.0
name:               jsonnet
version:            0.4.0.0
synopsis:           Jsonnet implementaton in pure Haskell
description:
  Please see the README on GitHub at <https://github.com/moleike/jsonnet-haskell#readme>

homepage:           https://github.com/moleike/haskell-jsonnet#readme
bug-reports:        https://github.com/moleike/haskell-jsonnet/issues
author:             Alexandre Moreno
maintainer:         alexmorenocano@gmail.com
copyright:          2020 Alexandre Moreno
category:           Compiler
license:            BSD-3-Clause
x-license:          BSD-3-Clause OR Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  stdlib/std.jsonnet
  test/golden/**/*.libsonnet
  test/golden/*.golden
  test/golden/*.jsonnet

source-repository head
  type:     git
  location: https://github.com/moleike/haskell-jsonnet

common common-extensions
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    RecordWildCards

common common-warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wno-unused-do-bind -Wunused-packages

library
  import:
    common-extensions
    , common-warnings

  exposed-modules:
    Language.Jsonnet
    Language.Jsonnet.Annotate
    Language.Jsonnet.Check
    Language.Jsonnet.Common
    Language.Jsonnet.Core
    Language.Jsonnet.Desugar
    Language.Jsonnet.Error
    Language.Jsonnet.Eval
    Language.Jsonnet.Eval.Monad
    Language.Jsonnet.Parser
    Language.Jsonnet.Parser.SrcSpan
    Language.Jsonnet.Pretty
    Language.Jsonnet.Std.Lib
    Language.Jsonnet.Std.TH
    Language.Jsonnet.Syntax
    Language.Jsonnet.Syntax.Annotated
    Language.Jsonnet.TH
    Language.Jsonnet.TH.QQ
    Language.Jsonnet.Value

  autogen-modules: Paths_jsonnet
  other-modules:   Paths_jsonnet
  hs-source-dirs:  src
  build-depends:
    , aeson                 >=2.2     && <2.3
    , base                  >=4.20    && <4.22
    , binary                >=0.8.8   && <0.9
    , bytestring            >=0.11    && <0.13
    , containers            >=0.6.2   && <0.8
    , data-fix              >=0.3.1   && <0.4
    , directory             >=1.3.6   && <1.4
    , exceptions            >=0.10.4  && <0.11
    , filepath              >=1.4.2   && <1.6
    , lens                  >=5.0.1   && <5.4
    , megaparsec            >=9.5     && <9.8
    , mtl                   >=2.2.2   && <2.4
    , parser-combinators    >=1.2.1   && <1.4
    , prettyprinter         >=1.7.0   && <1.8
    , scientific            >=0.3.7   && <0.4
    , template-haskell      >=2.16.0  && <2.23
    , text                  >=2.0     && <2.2
    , th-lift-instances     >=0.1.18  && <0.2
    , th-utilities          >=0.2.4.2 && <0.3
    , transformers-compat   >=0.6.6   && <0.8
    , unbound-generics      >=0.4.3   && <0.5
    , unordered-containers  >=0.2.14  && <0.3
    , vector                >=0.12.3  && <0.14

executable hs-jsonnet
  import:
    common-extensions
    , common-warnings

  main-is:         Main.hs
  autogen-modules: Paths_jsonnet
  other-modules:   Paths_jsonnet
  hs-source-dirs:  app
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , filepath
    , jsonnet
    , megaparsec
    , optparse-applicative  >=0.16.1 && <0.19
    , text

test-suite jsonnet-test
  import:
    common-extensions
    , common-warnings

  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  autogen-modules: Paths_jsonnet
  other-modules:
    Language.Jsonnet.Test.Golden
    Language.Jsonnet.Test.Roundtrip
    Paths_jsonnet

  hs-source-dirs:  test test/golden
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , containers
    , data-fix
    , filepath
    , hedgehog
    , jsonnet
    , prettyprinter
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , text

benchmark jsonnet-bench
  import:
    common-extensions
    , common-warnings

  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  build-depends:
    , base
    , bytestring
    , jsonnet
    , prettyprinter
    , tasty-bench
    , text

  ghc-options:    "-with-rtsopts=-A32m --nonmoving-gc"
